<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionForm">



    <TextView
        android:id="@+id/TransDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/TransDate"
        android:layout_marginTop="45dp"
        android:hint="@string/amount_spent"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/PaymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:autofillHints="Type of payment"
        android:entries="@array/Type_of_payments"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PaymentType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:text="@string/save_transaction" />


</RelativeLayout>