<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#588da8"
    tools:context=".Expense">


    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="45dp"
        android:background="#f3c623"
        android:hint="@string/_0_00_eur"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="false"
        android:textAlignment="textEnd" />

    <Spinner
        android:id="@+id/PaymentType"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:layout_below="@+id/TransDate"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="46dp"
        android:autofillHints="ACCOUNTS"
        android:entries="@array/Type_of_payments" />


    <Spinner
        android:id="@+id/Spinner_Category"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_below="@+id/TransDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="72dp"
        android:layout_toStartOf="@+id/PaymentType"
        android:autofillHints="CATEGORY" />

    <EditText
        android:id="@+id/etTransactionComment"
        android:layout_width="364dp"
        android:layout_height="65dp"
        android:layout_below="@+id/Spinner_Category"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="45dp"
        android:autofillHints="comment"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="101dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="60dp"
        android:text="@string/save_transaction"
        android:textColor="#404351"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_alignTop="@+id/etAmount"
        android:layout_alignBottom="@+id/etAmount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="101dp"
        android:text="@string/value"
        android:textColor="#404351"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TransDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/etAmount"
        android:layout_marginTop="75dp"
        android:hint="@string/select_date"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignTop="@id/textView5"
        android:layout_alignBottom="@id/TransDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="45dp"
        android:text="@string/date"
        android:textColor="#404351"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/etTransactionComment"
        android:layout_alignEnd="@+id/etTransactionComment"
        android:layout_alignBottom="@+id/etTransactionComment"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="71dp"
        android:text="@string/note"
        android:textColor="#404351"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>