<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Home_Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f4068">


    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:elevation="7dp"
            android:gravity="center"
            android:text="$1200"
            android:textColor="@color/design_default_color_surface"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#30475e" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp">

        </com.github.mikephil.charting.charts.PieChart>
    </FrameLayout>

    <ImageButton
        android:id="@+id/homescreenhelp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@null"
        android:contentDescription="@string/imgbtnaddincome"
        android:scaleType="fitCenter"
        android:tooltipText="help1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/ic_help_outline_black_24dp" />

    <ImageButton
        android:id="@+id/imageButtonAddIncome"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="48dp"
        android:background="@null"
        android:contentDescription="@string/imgbtnaddincome"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add" />

    <ImageButton
        android:id="@+id/imageButtonAddExpense"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="48dp"
        android:background="@null"
        android:contentDescription="@string/imgbtnaddexpense"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/minus" />

    <TextView
        android:id="@+id/textViewAddIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="28dp"
        android:elevation="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/add_income_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#f9f9f9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonAddIncome"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAddIncome3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="28dp"
        android:elevation="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/add_expense_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#f9f9f9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonAddExpense"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Spending Overview"
        android:textColor="#f9f9f9"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConstraintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="15dp"
        android:text="YOUR MONTHLY THRESHOLD"
        android:textColor="#f9f9f9"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/flThreshold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/flThreshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAddIncome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConstraintTitle">


        <ProgressBar
            android:id="@+id/pbThreshold"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/custom_progress_bar" />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>